--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.loadimpact</groupId>
     <artifactId>Load-Impact-Java-SDK</artifactId>
-    <version>1.1.3-SNAPSHOT</version>
+    <version>1.1.3</version>
     <packaging>jar</packaging>
 
     <name>Load Impact - Java SDK</name>
@@ -34,7 +34,8 @@
         <url>https://github.com/loadimpact/loadimpact-sdk-java</url>
         <connection>scm:git:git@github.com:loadimpact/loadimpact-sdk-java.git</connection>
         <developerConnection>scm:git:git@github.com:loadimpact/loadimpact-sdk-java.git</developerConnection>
-    </scm>
+      <tag>Load-Impact-Java-SDK-1.1.3</tag>
+  </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
